traefik/traefik-https-demo-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-https-demo
  namespace: default
spec:
  selector:
    app: traefik-https-demo
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-https-demo
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: traefik-https-demo
  template:
    metadata:
      labels:
        app: traefik-https-demo
    spec:
      containers:
      - name: traefik-https-demo
        image: shadowmktk/whoami:v1.5.0
        ports:
        - name: http
          containerPort: 80
